--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 <div class="wrapper">
 
 <div class="header">
-    <a href="/"><img src="/media/images/header.png" alt="ccradio" /></a><br /><br />
+    <a href="/"><img src="/media/images/header_beta.png" alt="ccradio" /></a><br /><br />
 </div>
 
 
