--- a/templates/404.html
+++ b/templates/404.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
-{% block maincont %}
+{% block info %}
 
 <div style="text-align:center;">
     <img src="/media/images/404.jpg" alt="404" />
 </div>
 
-{% endblock maincont %}
+{% endblock info %}
