play with 404 image

--- a/templates/404.html
+++ b/templates/404.html
@@ -2,7 +2,7 @@
 
 {% block info %}
 
-<img src="/media/images/404.jpg" alt="404" />
+<img src="/media/images/404.png" alt="404" />
 
 
 {% endblock info %}
