--- a/templates/base.html
+++ b/templates/base.html
@@ -20,9 +20,13 @@
     <a href="/"><img src="/media/images/header_beta.png" alt="ccradio" /></a><br /><br />
 </div>
 
+<div class="feedback" id="feedback">
+    <a href="https://docs.google.com/a/eellak.gr/spreadsheet/viewform?formkey=dHVvc2UzRm5NWnFUNlBINWhPWmVSMGc6MQ#gid=0" target="_blank" id="feedbackbtn"><img src="/media/images/feedback.png" alt="feedback" /></a>
+</div>
+
 
 <div class="maincont">
-    <div class="info">
+    <div class="info" id="info">
     {% block info %}
         <div class="box" id="about">
             <iframe src="/about/" width="700" height="500" frameborder="0" scrolling="auto"></iframe>
