--- a/media/css/style.css
+++ b/media/css/style.css
@@ -1,12 +1,13 @@
 html, body {
-            height:100%;
+    height:100%;
 }
 body {
     margin: 0px;
     padding: 0px;
     color:#000000;
     font-family:'Ubuntu', 'Droid Sans', 'dejavu sans';
-	font-size: 12px;
+	font-size: 10px;
+    line-height: 1.4;
 }
 
 .wrapper {
@@ -65,8 +66,7 @@ a:hover {
 .signup {
     float:right;
     width:400px;
-    padding-right:40px;
-    clear:right;
+    margin-right:40px;
 }
 
 
@@ -82,17 +82,27 @@ a:hover {
     width:460px;
     padding:10px;
     padding-left:20px;
-    font-size:0.9em;
+    padding-top:0px;
+    font-size:1.6em;
 }
 
-#live_play {
-    font-size:0.8em;
+.player-audio {
+	background-color:#eee;
+		width:100%;
+	border:1px solid #00CCFF;
+}
+
+.playlist {
+    background-color:#ccc;
+    padding:5px 15px;
+    text-align:center;
+    font-size:1.2em;
 }
 
 .error {
     color:#FF0000;
     display:block-inline;
-    width:420px;
+    width:400px;
     text-align:center;
 }
 
@@ -121,45 +131,10 @@ form#radio select {
 
 form#login {
     background-color:#eee;
-    /*
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    */
     border:1px solid #00ccff;
-    padding: 10px;
-    width: 400px;
-}
-
-form#login ol li {
-    background-color: none;
-    line-height: 30px;
-    list-style: none;
-    padding: 5px 10px;
-    margin-bottom: 2px;
-}
-
-form#login ol ol li {
-    background: none;
-    border: none;
-    float: left;
-}
-
-form#login label {
-    float: left;
-    font-size: 13px;
-    width: 110px;
-}
-
-form#login fieldset fieldset label {
-    background:none no-repeat left 50%;
-    line-height: 20px;
-    padding: 0 0 0 30px;
-    width: auto;
-}
-
-form#login fieldset fieldset label:hover {
-    cursor: pointer;
+    width: 100%;
+    text-align:center;
+    padding-top:15px;
 }
 
 form#login input {
@@ -170,9 +145,11 @@ form#login input {
     border-radius: 3px;
     font-style:italic;
     outline: none;
-    padding: 5px;
-    width: 240px;
-    font-size:13px;
+    padding: 5px 10px;
+    width: 300px;
+    margin-bottom:10px;
+    margin: auto;
+    font-size: 1.3em;
 }
 
 
@@ -192,6 +169,7 @@ form#login button {
     margin: auto;
     padding: 7px 15px;
     text-shadow: 0 1px 1px #000000;
+    margin-bottom:10px;
 }
 
 form#login button:hover {
@@ -208,7 +186,7 @@ form#login button:hover {
     bottom:0px;
     width:100%;
     height:75px;
-    font-size:0.8em;
+    font-size:1.2em;
     border-top: 2px solid #ccc;
 }
 
@@ -268,7 +246,7 @@ textarea {
     text-align:left;
     padding:10px;
     background-color:#eee;
-    font-size:1.2em;
+    font-size:1.3em;
 }
 
 .boxexit {
