disable reset passwd

--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
             <button type="submit">login</button>
         </form>
         <div class="signup-details">
-            <a href="/accounts/register/">κάνε εγγραφή</a> &nbsp;|&nbsp; <a href="/admin/password_reset/">υπενθύμιση κωδικού</a>
+            <a href="/accounts/register/">κάνε εγγραφή</a><!-- &nbsp;|&nbsp; <a href="/admin/password_reset/">υπενθύμιση κωδικού</a>-->
         </div>
         <div class="error">{{ authstate }}</div>
     </div>
