--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -11,7 +11,7 @@
 <p class="aligned wide"><label for="id_new_password1">Νέος κωδικός: </label>{{ form.new_password1 }}</p>
 {{ form.new_password2.errors }}
 <p class="aligned wide"><label for="id_new_password2">Επιβεβαίση νέου κωδικού: </label>{{ form.new_password2 }}</p>
-<p><input type="submit" value="{% trans 'Change my password' %}" /></p>
+<p><input type="submit" value="καταχώρηση" /></p>
 </form>
 
 {% else %}
