--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -2,7 +2,7 @@
 
 {% block info %}
 
-Σας στείλαμε ένα e-mail με οδηγίες να ορίσετε νέο κωδικό.
+Σας στείλαμε ένα e-mail με τις σχετικές οδηγίες.
 
 {% endblock %}
 
