fix forms styles

--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -4,14 +4,14 @@
 
 {% if validlink %}
 
-<h1>Εισαγωγή νέου κωδικού</h1>
+<h2>Εισαγωγή νέου κωδικού</h2>
 
-<form action="" method="post">
+<form action="" method="post" class="wide">
 {{ form.new_password1.errors }}
 <p class="aligned wide"><label for="id_new_password1">Νέος κωδικός: </label>{{ form.new_password1 }}</p>
 {{ form.new_password2.errors }}
-<p class="aligned wide"><label for="id_new_password2">Επιβεβαίση νέου κωδικού: </label>{{ form.new_password2 }}</p>
-<p><input type="submit" value="καταχώρηση" /></p>
+<p class="aligned wide"><label for="id_new_password2">Επιβεβαίση κωδικού: </label>{{ form.new_password2 }}</p>
+<p><button type="submit">Καταχώρηση</button></p>
 </form>
 
 {% else %}
