--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -4,11 +4,11 @@
 
 <p>Ξεχάσατε τον κωδικό σας;<br />Δώστε παρακάτω το e-mail σας για να σας σταλεί νέος</p>
 
-<form action="" method="post">
+<form action="" method="post" class="wide">
 {% csrf_token %}
 {{ form.email.errors }}
-<p><label for="id_email">Διεύθυνση e-mail: </label> {{ form.email }}<br />
-<input type="submit" value="αποστολή" /></p>
+<p><label for="id_email">Διεύθυνση e-mail: </label> {{ form.email }}</p>
+<p><button type="submit">Αποστολή</button></p>
 </form>
 
 {% endblock %}
