--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -48,7 +48,7 @@
       <input type="checkbox" name="tos" value="1" required /></td>
       <td>Συμφωνώ με τους <a href="#" id="tosopen">όρους χρήσης</a>
     </p>
-    <p class="submit"><input type="submit" value="Εγγραφή"></p>
+    <p class="submit"><button type="submit">Εγγραφή</button></p>
   </form>
 
 {% endblock %}
