--- a/media/css/style.css
+++ b/media/css/style.css
@@ -81,9 +81,7 @@ a:hover {
 .info {
     float:left;
     width:460px;
-    padding:10px;
-    padding-left:20px;
-    padding-top:0px;
+    margin-left:20px;
     font-size:1.6em;
 }
 
@@ -144,7 +142,6 @@ form#login input {
     -webkit-border-radius: 3px;
     border-radius: 3px;
     font-style:italic;
-    outline: none;
     padding: 5px 10px;
     width: 300px;
     margin-bottom:10px;
@@ -155,7 +152,7 @@ form#login input {
 
 form#login input:not([type=submit]):focus,
 form#login textarea:focus {
-    background: #ccc;
+    background-color: #ccc;
 }
 
 form#login button {
@@ -223,20 +220,50 @@ form#login button:hover {
     text-align:right;
 }
 
-input[type="text"] {
-	border: 1px solid #999;
-	padding: 6px 10px;
-	-webkit-border-radius: 8px;
-	-moz-border-radius: 8px;
-	border-radius: 8px;
+form.wide label {
+    vertical-align:-40%;
 }
 
-textarea {
-	border: 1px solid #999;
+form.wide input[type="text"],
+form.wide input[type="password"] {
 	padding: 6px 10px;
-	-webkit-border-radius: 8px;
-	-moz-border-radius: 8px;
-	border-radius: 8px;
+    background: #ffffff;
+    border: none;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    font-style:italic;
+    padding: 5px 10px;
+    width: 250px;
+    margin-bottom:10px;
+    margin: auto;
+    font-size: 1.4em;
+    float:right;
+}
+
+form.wide input[type="text"]:focus,
+form.wide input[type="password"]:focus {
+    background-color: #ccc;
+}
+
+form.wide button {
+    border:1px solid #ccc;
+	padding: 6px 10px;
+    background: #ffffff;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    padding: 5px 10px;
+    width: auto;
+    margin-bottom:10px;
+    margin: auto;
+    font-size: 1em;
+    float:left;
+}
+
+form.wide button:hover {
+    background-color: #ccc;
+    cursor:pointer;
 }
 
 .box {
