--- a/templates/panel.html
+++ b/templates/panel.html
@@ -13,11 +13,14 @@
             {% endfor %}
         </select>
     </form><br /><br />
+</div>
+{% endblock info %}
+
+{% block logs %}
     <div class="logs">
         αρχεία καταγραφής (προσεχώς)
     </div>
-</div>
-{% endblock info %}
+{% endblock logs %}
 
 {% block login %}
 {% endblock login %}
