--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,7 @@
             </div>
         </div>
     </div>
+    {% block logs %}{% endblock logs %}
     {% endblock player %}
     
     {% block login %}
