--- a/media/css/style.css
+++ b/media/css/style.css
@@ -193,38 +193,18 @@ form#login button:hover {
 .footer {
     clear:both; 
     background-color: #444;
-    padding: 0 0 1.5em 0;
+    padding: 0 0 1em 0;
     color: #fff;
     position:absolute;
     bottom:0px;
     width:100%;
-    height:75px;
+    height:50px;
     font-size:1.2em;
-    border-top: 2px solid #ccc;
 }
 
-.footerLicense {
-    padding-top: 2em;
-    margin-bottom: 2em;
-    width:977px;
-    margin:auto;
-}
-
-.footerLicense img {
-    float: left;
-    margin-right: 1em;
-    padding-top: 4px;
-}
-
-.footleft{
-    float:left;
-    width:48%;
-}
-
-.footright{
-    float:right;
-    width:48%;
-    text-align:right;
+.footertext {
+    text-align:center;
+    padding:20px;
 }
 
 form.wide label {
