fix tos/about code

--- a/templates/panel.html
+++ b/templates/panel.html
@@ -18,7 +18,7 @@
 
 {% block logs %}
     <div class="logs">
-        αρχεία καταγραφής (προσεχώς)
+        αρχεία καταγραφής (προσεχώς) {{ userip }}
     </div>
 {% endblock logs %}
 
