--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,9 @@
     <link rel="shortcut icon" href="/media/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="/media/css/style.css" type="text/css" media="screen" />
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=greek,latin' rel='stylesheet' type='text/css'>
-    <script type="text/javascript" src="/media/js/jquery-1.7.2.min.js"></script>
+    <script src="http://code.jquery.com/jquery.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.8.23/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="/media/css/jquery-ui-1.8.23.custom.css" type="text/css" media="screen" />
     <script type="text/javascript" src="/media/js/main.js"></script>
 </head>
 <body>
@@ -51,7 +53,7 @@
     <div class="player">
         <div class="player-audio">	        
             <div style="padding:25px 35px;">
-  	        <object type="application/x-shockwave-flash" data="/media/player.swf" id="player" height="33" width="330"><param name="movie" value="/media/player.swf"><param name="FlashVars" value="bg=0xf8f8f8&amp;leftbg=0xeeeeee&amp;lefticon=0x666666&amp;rightbg=0xcccccc&amp;rightbghover=0x999999&amp;righticon=0x666666&amp;righticonhover=0xffffff&amp;text=0x666666&amp;slider=0x666666&amp;track=0xFFFFFF&amp;initialvolume=50&amp;loop=no&amp;autostart=yes&amp;playerID=player&amp;titles=ccradio.ellak.gr{% if broadcaster.stream.name %}: {{ broadcaster.stream.name }}{% endif %}&amp;soundFile=http://stream.creativecommons.gr:8000/{% if broadcaster.stream.uri %}{{broadcaster.stream.uri}}{% else %}live0{% endif %}"><param name="quality" value="high"><param name="menu" value="false"><param name="wmode" value="transparent"></object>
+  	        <object type="application/x-shockwave-flash" data="/media/player.swf" id="player" height="33" width="330"><param name="movie" value="/media/player.swf"><param name="FlashVars" value="bg=0xf8f8f8&amp;leftbg=0xeeeeee&amp;lefticon=0x666666&amp;rightbg=0xcccccc&amp;rightbghover=0x999999&amp;righticon=0x666666&amp;righticonhover=0xffffff&amp;text=0x666666&amp;slider=0x666666&amp;track=0xFFFFFF&amp;loader=0x00aaee&amp;initialvolume=50&amp;loop=no&amp;autostart=yes&amp;playerID=player&amp;titles=ccradio.ellak.gr{% if broadcaster.stream.name %}: {{ broadcaster.stream.name }}{% endif %}&amp;soundFile=http://stream.creativecommons.gr:8000/{% if broadcaster.stream.uri %}{{broadcaster.stream.uri}}{% else %}live0{% endif %}"><param name="quality" value="high"><param name="menu" value="false"><param name="wmode" value="transparent"></object>
   	        </div>
         
             <div class="playlist">
