generalize stream url

--- a/templates/panel.html
+++ b/templates/panel.html
@@ -20,7 +20,7 @@
 {% block logs %}
     <div class="logs">
         <div class="toplabel">radio.logs</div>
-        <form action="/panel/logs" method="post" class="wide" id="logs">
+        <form action="/panel/logs/" method="post" class="wide" id="logs">
             <input type="text" id="datepicker" name="" placeholder="επιλογή ημερομηνίας"  /><br /><br />
             <button type="submit">λήψη</button>
         </form>
