--- a/templates/panel.html
+++ b/templates/panel.html
@@ -5,7 +5,7 @@
     <div class="toplabel">about.me</div>
     <img src="/media/images/cat_{{ broadcaster.category.slug }}.svg" alt="{{ broadcaster.category.slug }}" /><br />
     <b>{{ broadcaster.title }}</b><br />
-    <div class="useropts">[ <span style="color:gray;">επεξεργασία προφίλ</span> | <a href="/logout/">αποσύνδεση</a> ]</div><br />
+    <div class="useropts">[ <a href="/panel/edit/">επεξεργασία προφίλ</a> | <a href="/logout/">αποσύνδεση</a> ]</div><br />
     <form action="/panel/" method="post" id="radio" name="radio" onChange="document.radio.submit()">
         <label for=radio>Radio: </label>
         <select name="stream">
