add ccradio certification

--- a/templates/base.html
+++ b/templates/base.html
@@ -85,7 +85,7 @@
 
 <div class="footer">
     <div class="footertext">
-        <a href="#" id="tosopen">Όροι χρήσης</a> &nbsp;-&nbsp; Υλοποίηση &amp; συντήρηση από <a href="http://www.eellak.gr" target="_blank">ΕΕΛ/ΛΑΚ</a> με χρήση των Ανοιχτών Λογισμικών <a href="http://www.djangoproject.com/" target="_blank">Django</a> και <a href="http://www.icecast.org/" target="_blank">Icecast</a>
+        <a href="#" id="tosopen">Όροι χρήσης</a> &nbsp;-&nbsp; <a href="/media/ccradio-certification.pdf">Βεβαίωση</a> &nbsp;-&nbsp; Υλοποίηση &amp; συντήρηση από <a href="http://www.eellak.gr" target="_blank">ΕΕΛ/ΛΑΚ</a> με χρήση των Ανοιχτών Λογισμικών <a href="http://www.djangoproject.com/" target="_blank">Django</a> και <a href="http://www.icecast.org/" target="_blank">Icecast</a>
     </div>
 </div>
 
