--- a/templates/tos.html
+++ b/templates/tos.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="boxtext">
-<h2>﻿Όροι Χρήσης διαδικτuακού τόπου ccradio.ellak.gr</h2><br />
+<h2>Όροι Χρήσης διαδικτuακού τόπου ccradio.ellak.gr</h2><br />
 
 
 <b>1. Περιγραφή Διαδικτυακού τόπου και αποδοχή όρων χρήσης</b><br />
