--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 </div>
 
 <div class="feedback" id="feedback">
-    <a href="https://docs.google.com/a/eellak.gr/spreadsheet/viewform?formkey=dHVvc2UzRm5NWnFUNlBINWhPWmVSMGc6MQ#gid=0" target="_blank" id="feedbackbtn"><img src="/media/images/feedback.png" alt="feedback" /></a>
+    <a href="#" id="feedbackopen"><img src="/media/images/feedback.png" alt="feedback" /></a>
 </div>
 
 
@@ -41,6 +41,13 @@
         </div>
     </div>
 
+    <div class="box" id="feedbackbx">
+        <iframe src="/feedback/" width="700" height="150" frameborder="0" scrolling="auto"></iframe>
+        <div class="boxexit">
+            <a href="#" id="feedbackexit"><img src="/media/images/close.png" alt="close" /></a>
+        </div>
+    </div>
+
     {% block info %}
 
     Το ψηφιακό μουσικό ραδιόφωνο <b>ccradio.ellak.gr</b> είναι μια υπηρεσία που απευθύνεται κυρίως σε όσους θέλουν να αναπαράγουν δημόσια στους χώρους τους μουσική που <b>διανέμεται ελεύθερα</b> με άδειες <a href="http://creativecommons.gr/" target="_blank">Creative Commons</a> και <b>δεν δημιουργεί απαιτήσεις από φορείς συλλογικής διαχείρισης.</b><br /><br />
@@ -55,8 +62,8 @@
     <div class="player">
         <div class="player-audio">
             <div style="padding:25px 35px;">
-  	        <object type="application/x-shockwave-flash" data="/media/player.swf" id="player" height="33" width="330"><param name="movie" value="/media/player.swf"><param name="FlashVars" value="bg=0xf8f8f8&amp;leftbg=0xeeeeee&amp;lefticon=0x666666&amp;rightbg=0xcccccc&amp;rightbghover=0x999999&amp;righticon=0x666666&amp;righticonhover=0xffffff&amp;text=0x666666&amp;slider=0x666666&amp;track=0xFFFFFF&amp;loader=0x00aaee&amp;initialvolume=50&amp;loop=no&amp;autostart=yes&amp;playerID=player&amp;titles=ccradio.ellak.gr{% if broadcaster.stream.name %}: {{ broadcaster.stream.name }}{% endif %}&amp;soundFile={{ STREAM_URL }}{% if broadcaster.stream.uri %}{{broadcaster.stream.uri}}{% else %}live0{% endif %}"><param name="quality" value="high"><param name="menu" value="false"><param name="wmode" value="transparent"></object>
-  	        </div>
+          <object type="application/x-shockwave-flash" data="/media/player.swf" id="player" height="33" width="330"><param name="movie" value="/media/player.swf"><param name="FlashVars" value="bg=0xf8f8f8&amp;leftbg=0xeeeeee&amp;lefticon=0x666666&amp;rightbg=0xcccccc&amp;rightbghover=0x999999&amp;righticon=0x666666&amp;righticonhover=0xffffff&amp;text=0x666666&amp;slider=0x666666&amp;track=0xFFFFFF&amp;loader=0x00aaee&amp;initialvolume=50&amp;loop=no&amp;autostart=yes&amp;playerID=player&amp;titles=ccradio.ellak.gr{% if broadcaster.stream.name %}: {{ broadcaster.stream.name }}{% endif %}&amp;soundFile={{ STREAM_URL }}{% if broadcaster.stream.uri %}{{broadcaster.stream.uri}}{% else %}live0{% endif %}"><param name="quality" value="high"><param name="menu" value="false"><param name="wmode" value="transparent"></object>
+          </div>
 
             <div class="playlist">
                 &#x266b;&nbsp; <span id="live_play">{% block play %}{{ play|truncatewords_html:7|safe }}{% endblock play %}</span>
